1999-09-20  Ettore Perazzoli  <ettore@comm2000.it>

	* gnome-appbar.c (gnome_appbar_construct): Put alignment back in
	so that the label is still left-aligned.

1999-09-19  Ettore Perazzoli  <ettore@comm2000.it>

	* gnome-appbar.c (gnome_appbar_construct): Set horizontal usize on
	the label to 1, so that it does not stupidly change size when the
	text is larger than the available space.

1999-09-19  Havoc Pennington  <hp@pobox.com>

	* gnome-animator.c (prepare_aux_pixmaps): only create pixmaps
	if we are realized
	(size_allocate): Don't do the gdk_window_clear_area() calls
	unless we are realized
	(paint): Create backing store here if necessary... bad hack,
	need realize/unrealize eventually

	Bug reported by Damon Chaplin

	* gnome-dateedit.c (gnome_date_edit_set_popup_range): Regenerate
	the popup
	(gnome_date_edit_set_flags): Use ~ instead of ! for bitwise
	negation. 
	(gnome_date_edit_set_flags): Set new flags at the beginning 
	of the function

	All three bugs reported by Damon Chaplin
	
	* gnome-font-picker.c (gnome_font_picker_init): Set a default
	for use_font_in_label_size, bug reported by Damon Chaplin

1999-09-18  Federico Mena Quintero  <federico@redhat.com>

	* gnome-canvas.c (scroll_to): Fixed little off-by-one error in
	size computation.

1999-09-17  Federico Mena Quintero  <federico@redhat.com>

	* gnome-canvas.c (gnome_canvas_expose): Process exposures
	immediately.  This makes scrolling a lot nicer.

	* gnome-dock.c (gnome_dock_add_floating_item): Do realization,
	mapping, and redraw queueing the right way.
	(gnome_dock_set_client_area): Likewise.

	* gnome-dock-band.c (gnome_dock_band_insert): Likewise.

	* gnome-app.c (gnome_app_set_contents): Do all the proper checks
	with respect to the dock's new client area.  Also, connect a
	signal handler to the parent_set signal of the contents.
	(contents_parent_set): Set the app->contents to NULL when the
	contents are unparented.  This fixes a bug where the app would